<resources>
    <string name="app_name">Contact Tracker</string>
    <string name="apply">Aplicar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="meters">Metros</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
    <string name="hour">Hora</string>
    <string name="accuracy">Precisión</string>
    <string name="minSecsText">%1$d min %2$d sec</string>
    <string name="percentText">%.2f %%</string>
    <string name="m">%.2f m</string>
    <string name="genericError">Ha ocurrido un error</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <plurals name="daysText">
        <item quantity="one">%d día</item>
        <item quantity="other">%d días</item>
    </plurals>
    <plurals name="metersText">
        <item quantity="one">%.2f metro</item>
        <item quantity="other">%.2f metros</item>
    </plurals>
    <plurals name="positivesText">
        <item quantity="one">%d positivo</item>
        <item quantity="other">%d positivos</item>
    </plurals>
    <plurals name="positivesTextWithNoValue">
        <item quantity="one">positivo</item>
        <item quantity="other">positivos</item>
    </plurals>
    <plurals name="riskContactTextWithNoValue">
        <item quantity="one">contacto de riesgo con</item>
        <item quantity="other">contactos de riesgo con</item>
    </plurals>
    <string name="network_error">Ha habido un error de red en la solicitud.</string>
    <string name="request_error">Error en la solicitud</string>
    <string name="required_field">Este campo es obligatorio</string>
    <string name="shared_prefs_file_name">es.uniovi.eii.contacttracker.sharedprefs</string>
    <string name="shared_prefs_location_alarm_start">LocationAlarmStart</string>
    <string name="shared_prefs_location_alarm_end">LocationAlarmEnd</string>
    <string name="shared_prefs_location_alarm_enabled">LocationAlarmEnabled</string>
    <string name="shared_prefs_tracker_config_min_interval">TrackerConfigMinInterval</string>
    <string name="shared_prefs_tracker_config_smallest_displacement">TrackerConfigSmallestDisplacement</string>
    <string name="shared_prefs_personal_data_name">PersonalDataName</string>
    <string name="shared_prefs_personal_data_surname">PersonalDataSurname</string>
    <string name="shared_prefs_personal_data_dni">PersonalDataDni</string>
    <string name="shared_prefs_personal_data_phoneNumber">PersonalDataPhoneNumber</string>
    <string name="shared_prefs_personal_data_city">PersonalDataCity</string>
    <string name="shared_prefs_personal_data_cp">PersonalDataCp</string>
    <string name="shared_prefs_risk_contact_check_mode">RiskContactCheckMode</string>
    <string name="shared_prefs_risk_contact_check_hour">RiskContactCheckHour</string>
    <string name="shared_prefs_risk_contact_check_scope">RiskContactCheckScope</string>
    <string name="shared_prefs_new_install">NewInstall</string>
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="labelStartStop">Iniciar o Detener el rastreador de ubicación</string>
    <string name="labelStartedService">Servicio de localización iniciado.</string>
    <string name="labelStoppedService">Servicio de localización detenido.</string>
    <string name="locationTrackerTitle">Rastreo de Ubicación</string>
    <string name="labelStartStopTracker">Servicio para rastrear la ubicación</string>
    <string name="tabTracker">Rastreador</string>
    <string name="tabAlarms">Alarmas</string>
    <string name="personalDataTitle">Introduce tus datos personales</string>
    <string name="personalDataExplanation">Al introducir tus datos estás facilitando las actividades de rastreo de COVID-19. Tus datos personales quedarán asociados a las localizaciones que se suban a la nube. </string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="phoneNumber">Número de teléfono</string>
    <string name="city">Localidad</string>
    <string name="cp">Código Postal</string>
    <string name="personalDataConsent">Consentimiento de Protección de Datos</string>
    <string name="personalDataRationale">Esta aplicación utiliza tus datos personales asociados a las localizaciones registradas
        para facilitar y mejorar las tareas de rastreo por parte de las autoridades sanitarias. Estos datos personales serán subidos a la nube una
        vez notifiques un resultado positivo y quedarán asociados a tus ubicaciones.</string>
    <string name="personalDataRationale2">Si lo deseas puedes optar por no indicar tus datos personales y
        notificar que has dado positivo de manera anónima.</string>
    <string name="consentRationale">De acuerdo con lo establecido en la normativa vigente
        sobre protección de datos de la LOPD/GDD de 2018 necesitamos tu consentimiento
        voluntario para llevar a cabo el tratamiento de dichos datos personales de forma lícita.</string>
    <string name="privacyPolicyAgreement">Al aceptar, estás confirmando que tienes más de 14 años y que estás de acuerdo
    con el tratamiento de los datos personales aportados y con nuestra Política de Privacidad.</string>
    <string name="agree">Sí, estoy de acuerdo</string>
    <string name="cancelAgree">No, gracias</string>
    <string name="question_asymptomatic">¿Has tenido síntomas de COVID-19?</string>
    <string name="answer_asymptomatic_2">No, soy asintomático.</string>
    <string name="question_vaccinated">¿Estás vacunado contra el COVID-19?</string>
    <string name="answer_vaccinated_2">No, aún no estoy vacunado.</string>
    <string name="appOwner">Dueño de la aplicación</string>
    <string name="appOwnerText">El dueño y responsable de la aplicación Contact Tracker es Alejandro Flórez Muñiz, en el cual reside total responsabilidad sobre el tratamiento de los datos de los interesados.El dueño y responsable de la aplicación Contact Tracker es Alejandro Flórez Muñiz, en el cual reside total responsabilidad sobre el tratamiento de los datos de los interesados.</string>
    <string name="treatmentResponsable">Responsable del tratamiento</string>
    <string name="treatmentResponsableText">El tratamiento de los datos es responsabilidad del dueño de la aplicación, Alejandro Flórez Muñiz, por lo que no se deriva el tratamiento de los datos a entidades de terceros. Datos de contacto del responsable:</string>
    <string name="treatmentResponsableItem1">•	Nombre y apellidos: Alejandro Flórez Muñiz.</string>
    <string name="treatmentResponsableItem2">•	Correo electrónico: alexflorezmuniz@gmail.com</string>
    <string name="treatmentResponsableItem3">•	Teléfono móvil: 695 82 28 79</string>
    <string name="treatmentResponsableItem4">•	Dirección: Villalegre, Avilés, Asturias</string>
    <string name="treatmentResponsableItem5">•	País: España</string>
    <string name="gatheredData">Datos recolectados</string>
    <string name="gatheredDataText1">Esta aplicación recopila datos de geolocalización del dispositivo de forma periódica y mientras la aplicación está en segundo plano si el usuario lo permite. Los datos de geolocalización se recogen mediante los servicios de Google instalados y quedan registrados en el almacenamiento local del dispositivo. Opcionalmente, también se registran los datos personales del usuario, si este lo permite, quedando asociados a las ubicaciones registradas. Para los datos de geolocalización se registra:</string>
    <string name="gatheredDataItem1">•	Latitud y Longitud</string>
    <string name="gatheredDataItem2">•	Fecha y hora de la ubicación</string>
    <string name="gatheredDataText2">Para los datos personales se registra:</string>
    <string name="gatheredDataItem3">•	Nombre y apellidos</string>
    <string name="gatheredDataItem4">•	DNI</string>
    <string name="gatheredDataItem5">•	Número de teléfono</string>
    <string name="gatheredDataItem6">•	Localidad</string>
    <string name="gatheredDataItem7">•	Código postal</string>
    <string name="gatheredDataText3">Todos estos datos se almacenan en local hasta que el usuario da su consentimiento para subirlos a la nube y compartirlos con el resto de usuarios, aunque los datos personales asociados a los itinerarios solo son visibles por los administradores desde el panel de control web.</string>
    <string name="appPermissions">Permisos de la aplicación</string>
    <string name="appPermissionsText1">La aplicación solicita una serie de permisos para acceder a los servicios de ubicación del dispositivo:</string>
    <string name="appPermissionsItem1">1.	ACCESS_FINE_LOCATION: permite acceder a los datos sobre la ubicación precisa del usuario.</string>
    <string name="appPermissionsItem2">2.	Activar la ubicación: se solicita al usuario que active el GPS del dispositivo para poder recibir actualizaciones de ubicación.</string>
    <string name="appPermissionsItem3">3.	Localización en segundo plano: permite recopilar datos de ubicación mientras la aplicación no está activa.</string>
    <string name="consent">Consentimiento del interesado</string>
    <string name="consentText1">Para realizar cualquier operación que involucre el tratamiento de datos personales del usuario se solicita previamente su consentimiento informándole sobre la política de privacidad.</string>
    <string name="consentText2">Antes de asociar los datos personales del usuario con sus itinerarios y subirlos a la nube, se muestra una cláusula informativa para solicitar su consentimiento.</string>
    <string name="consentText3">Del mismo modo, para registrar las ubicaciones es necesario que el usuario conceda los permisos citados en el apartado anterior.</string>
    <string name="purpose">Finalidad del tratamiento</string>
    <string name="purposeText1">El tratamiento de los datos tiene como objetivo facilitar las tareas de rastreo al personal sanitario al asociar los itinerarios del usuario con sus datos personales, de forma que los profesionales puedan contactar fácilmente con estos usuarios y visualizar las zonas por las que han estado.</string>
    <string name="purposeText2">Además, el registro de coordenadas tiene como finalidad almacenar las ubicaciones por las que ha transcurrido el usuario que ha dado positivo poniendo en peligro a otras personas, de modo que se pueda notificar a dichas personas sobre un posible contacto de riesgo.</string>
    <string name="rights">Derechos del interesado</string>
    <string name="rightsText">Entre los derechos que el interesado dispone frente al tratamiento de sus datos personales, se encuentran:</string>
    <string name="rightsItem1">•	Derecho de acceso: consiste en el derecho del usuario para solicitar el acceso a sus datos personales que están siendo tratados. En el caso de que sus localizaciones hayan sido subidas a la nube de forma anónima sin ser asociadas a sus datos personales este derecho no será aplicable dada la anonimidad de los datos.</string>
    <string name="rightsItem2">•	Derecho de rectificación: derecho del usuario para rectificar sus datos, es decir, para contactar con el responsable del tratamiento de forma que este corrija sus datos personales en caso de que no sean correctos o estén desactualizados.</string>
    <string name="rightsItem3">•	Derecho de cancelación: se refiere al derecho del usuario para eliminar sus datos personales del sistema.</string>
</resources>